--- a/emacs.org
+++ b/emacs.org
@@ -723,6 +723,9 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 (interactive)
 (org-babel-load-file "~/.emacs.d/emacs.org"))
 
+(defun display-startup-echo-area-message ()
+  (message (concat "Emacs took " (emacs-init-time) " seconds to start.")))
+
 #+end_src
 
 * ALIAS
