Additional keybingings for SWIFT mode

--- a/emacs.org
+++ b/emacs.org
@@ -626,6 +626,37 @@ Recognized window header names are: 'comint, 'locals, 'registers,
     (define-key map (kbd "k") 'scroll-up-line)
     (define-key map (kbd "p") 'beginning-of-defun)
     (define-key map (kbd "n") 'end-of-defun)
+
+    (define-key map (kbd "q") 'toggle-swift-mode)
+    (define-key map (kbd "w") 'toggle-swift-mode)
+    (define-key map (kbd "e") 'toggle-swift-mode)
+    (define-key map (kbd "r") 'toggle-swift-mode)
+    (define-key map (kbd "t") 'toggle-swift-mode)
+    (define-key map (kbd "y") 'toggle-swift-mode)
+    (define-key map (kbd "u") 'toggle-swift-mode)
+    (define-key map (kbd "o") 'toggle-swift-mode)
+    (define-key map (kbd "[") 'toggle-swift-mode)
+    (define-key map (kbd "]") 'toggle-swift-mode)
+    (define-key map (kbd "a") 'toggle-swift-mode)
+    (define-key map (kbd "s") 'toggle-swift-mode)
+    (define-key map (kbd "d") 'toggle-swift-mode)
+    (define-key map (kbd "f") 'toggle-swift-mode)
+    (define-key map (kbd "g") 'toggle-swift-mode)
+    (define-key map (kbd "h") 'toggle-swift-mode)
+    (define-key map (kbd "j") 'toggle-swift-mode)
+    (define-key map (kbd "l") 'toggle-swift-mode)
+    (define-key map (kbd ";") 'toggle-swift-mode)
+    (define-key map (kbd "'") 'toggle-swift-mode)
+    (define-key map (kbd "#") 'toggle-swift-mode)
+    (define-key map (kbd "z") 'toggle-swift-mode)
+    (define-key map (kbd "x") 'toggle-swift-mode)
+    (define-key map (kbd "c") 'toggle-swift-mode)
+    (define-key map (kbd "v") 'toggle-swift-mode)
+    (define-key map (kbd "b") 'toggle-swift-mode)
+    (define-key map (kbd "m") 'toggle-swift-mode)
+    (define-key map (kbd ",") 'toggle-swift-mode)
+    (define-key map (kbd ".") 'toggle-swift-mode)
+    (define-key map (kbd "/") 'toggle-swift-mode)
     map))
 
 (define-minor-mode swift-mode
