--- a/notes.org
+++ b/notes.org
@@ -1,5 +1,11 @@
 #+TITLE: Emacs config
 
+* GIT
+** First time usage
+git config --global user.name "Giedrius"
+
+git config --global user.email "giedriusj1@gmail.com"
+
 * EMACS
 ** building emacs on Linux
 ./autogen.sh
