additional changes to SWIFT mode

--- a/emacs.org
+++ b/emacs.org
@@ -520,6 +520,22 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 #+end_src
 ** swift
 #+begin_src emacs-lisp
+(defface hi-space
+  '((((background dark)) (:background "#202525" :foreground "black"))
+    (t (:background "pink")))
+  "Face for hi-lock mode."
+)
+
+(defun hl ()
+(interactive)
+(highlight-regexp "^[ \t]+" 'hi-space)
+)
+
+(defun un-hl()
+(interactive)
+(unhighlight-regexp "^[ \t]+")
+)
+
 
 (defun swift-up()
   (interactive)
@@ -592,12 +608,16 @@ Recognized window header names are: 'comint, 'locals, 'registers,
   (interactive)
   (if (eq global-swift-mode t)
       (progn
+        ;; turning mode off
+        (un-hl)
         (custom-set-faces '(cursor ((t (:background "DarkOrange1")))))
         (custom-set-faces '(mode-line ((t (:background "#404040")))))
         (global-swift-mode -1)
         )
 
     (progn
+      ;; turning mode off
+      (hl)
       (custom-set-faces '(cursor ((t (:background "blue")))))
       (custom-set-faces '(mode-line ((t (:background "#333377")))))
       (global-swift-mode)
