--- a/emacs.org
+++ b/emacs.org
@@ -31,7 +31,6 @@
     auto-highlight-symbol
     bind-key
     company
-    dired-filetype-face
     dired-toggle-sudo
     flycheck
     google-this
@@ -416,7 +415,12 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 (global-auto-highlight-symbol-mode 1)
 (delete-selection-mode 1)
 (show-paren-mode t)
-(semantic-mode t)
+;; (semantic-mode t)
+
+(which-function-mode 1)
+(custom-set-faces '(which-func ((t (:foreground "DarkOrange1" :box (:line-width 1 :color "grey75"))))))
+
+
 
 (customize-set-variable 'electric-pair-mode t)
 (customize-set-variable 'bmkp-last-as-first-bookmark-file "~/.emacs.d/bookmarks" )
@@ -496,7 +500,7 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 (define-key org-mode-map (kbd "C-j") 'helm-mini)
 (define-key lisp-interaction-mode-map (kbd "C-j") 'helm-mini)
 
-(define-key control-semi-map (kbd "C-s") 'helm-semantic-or-imenu)
+(define-key control-semi-map (kbd "C-s") 'helm-imenu)
 
 (define-key control-semi-map (kbd "l") 'helm-M-x)
 (define-key control-semi-map (kbd "o") 'swiper-helm)
